apps/base/media-center/qbittorrent/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: media
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
  hostnames:
    - qbittorrent.nathan-fouere.com
  rules:
    - backendRefs:
        - name: qbittorrent
          port: 80
